--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8"/>
 	<title>Datakhana</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&display=swap" rel="stylesheet">
 	<!-- Bootstrap 5 (CDN) -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
 	<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
